; ModuleID = '/home/carl/AnghaBench/vlc/modules/audio_output/extr_vlcpulse.c_vlc_pa_disconnect.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/audio_output/extr_vlcpulse.c_vlc_pa_disconnect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vlc_pa_disconnect(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load i32*, i32** %6, align 8
  %8 = call i32 @pa_threaded_mainloop_lock(i32* %7)
  %9 = load i32*, i32** %5, align 8
  %10 = call i32 @pa_context_disconnect(i32* %9)
  %11 = load i32*, i32** %5, align 8
  %12 = call i32 @pa_context_set_event_callback(i32* %11, i32* null, i32* null)
  %13 = load i32*, i32** %5, align 8
  %14 = call i32 @pa_context_set_state_callback(i32* %13, i32* null, i32* null)
  %15 = load i32*, i32** %5, align 8
  %16 = call i32 @pa_context_unref(i32* %15)
  %17 = load i32*, i32** %6, align 8
  %18 = call i32 @pa_threaded_mainloop_unlock(i32* %17)
  %19 = load i32*, i32** %6, align 8
  %20 = call i32 @pa_threaded_mainloop_stop(i32* %19)
  %21 = load i32*, i32** %6, align 8
  %22 = call i32 @pa_threaded_mainloop_free(i32* %21)
  %23 = load i32*, i32** %4, align 8
  ret void
}

declare dso_local i32 @pa_threaded_mainloop_lock(i32*) #1

declare dso_local i32 @pa_context_disconnect(i32*) #1

declare dso_local i32 @pa_context_set_event_callback(i32*, i32*, i32*) #1

declare dso_local i32 @pa_context_set_state_callback(i32*, i32*, i32*) #1

declare dso_local i32 @pa_context_unref(i32*) #1

declare dso_local i32 @pa_threaded_mainloop_unlock(i32*) #1

declare dso_local i32 @pa_threaded_mainloop_stop(i32*) #1

declare dso_local i32 @pa_threaded_mainloop_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
